System Analysis - Functional requirements complete - Stack Technology MVC/Frameworks/ExpressJS/AngularJS

--- a/references.bib
+++ b/references.bib
@@ -388,6 +388,16 @@
   Timestamp                = {2015.09.27}
 }
 
+@Electronic{angular,
+  Title                    = {Backbone.js vs AngularJS : Demystifying the Myths},
+  Author                   = {Gupta, Raj},
+  HowPublished             = {http://www.nebithi.com/2012/12/27/backbone-and-angulardemystifying-the-myths/},
+  Year                     = {27.12.2012.},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.09}
+}
+
 @InProceedings{6758978,
   Title                    = {Does Gamification Work? -- A Literature Review of Empirical Studies on Gamification},
   Author                   = {Hamari, J. and Koivisto, J. and Sarsa, H.},
@@ -779,6 +789,14 @@ URN: urn:nbn:de:0114-fqs0501297},
   Timestamp                = {2015.10.03}
 }
 
+@Electronic{Framework,
+  Title                    = {https://en.wikipedia.org/wiki/Softwareframework},
+  Author                   = {Wikipaidia},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.08}
+}
+
 @Article{Williamson,
   Title                    = {Challenges in the management of the blood supply},
   Author                   = {Williamson, Lorna M and Devine, Dana V},
@@ -867,5 +885,13 @@ URN: urn:nbn:de:0114-fqs0501297},
 
   Date-added               = {2015-10-03 18:43:55 +0000},
   Date-modified            = {2015-10-03 18:50:17 +0000}
+}
+
+@Electronic{angular-directives,
+  Title                    = {AngularJS: Conceptual Overview.},
+  HowPublished             = {http://docs.angularjs.org/guide/},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.09}
 }
 
