--- a/system_analysis.tex
+++ b/system_analysis.tex
@@ -38,7 +38,7 @@
 				Το web portal που βρίσκεται στο υπολογιστικό νέφος χρησιμοποιείται απο όλες τις ομάδες χρηστών. Όσον αφορά στους εθελοντές αιμοδότες ισχύουν οι ίδιες λειτουργικές απαιτήσεις όπως στην εφαρμογή του έξυπνου κινητού οι οποίες και αναλύθηκαν παραπάνω στο \ref{sssec:functional_requirements_mobile}. Όσον αφορά στους χρήστες/διαχειριστές των κέντρων αιμοδοσίας έχουμε τις παρακάτω λειτουργικές απαιτήσεις:
 				\begin{itemize}
 					\item Δημιουργία νέων γεγονότων αιμοδοσίας.
-					\item Αποστολή ειδοποιήσεων στους εθελοντές αιμοδότες βάση των γεγονότων αιμοδοσίας, των αναγκών και των κριτηρίων αποδοχής.
+				%	\item Αποστολή ειδοποιήσεων στους εθελοντές αιμοδότες βάση των γεγονότων αιμοδοσίας, των αναγκών και των κριτηρίων αποδοχής.
 					\item Προβολή στατιστικών ανά έτος σχετικά με τις ειδοποιήσεις που στάλθηκαν από το συγκεκριμένο κέντρο αιμοδοσίας και την ανταπόκριση των χρηστών (αποδοχή, απόρριψη, άνοιγμα ειδοποίησης, ολοκλήρωση αιμοδοσίας).
 					\item Διαχείριση των ραντεβού για αιμοληψία.
 					\item Διαχείριση του προφίλ του κέντρου αιμοδοσίας.
@@ -271,7 +271,7 @@
  
 	\subsubsection{Εφαρμογή}
 -Δυνατότητα εγγραφής στο σύστημα ως εθελοντής αιμοδότης με χρήση του αριθμού μητρώου κοινωνικής ασφάλισης (Α.Μ.Κ.Α.).
-
+\\*
 \begin{table}[H]
 	\begin{center}
 	    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
@@ -321,7 +321,7 @@
 \end{table}
 
 -Δυνατότητα σύνδεσης στο σύστημα αν έχει πραγματοποιήσει ήδη έγγραφή στο παρελθόν.
-
+\\*
 \begin{table}[H]	
 	\begin{center}
 	    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
@@ -366,7 +366,7 @@
 \end{table}
 
 -	Δυνατότητα προβολής γεγονότων αιμοδοσίας.
-	
+\\*
 \begin{table}[H]	
 	\begin{center}
 	    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
@@ -411,7 +411,7 @@
 \end{table}
 
 -Δυνατότητα λήψης ειδοποιήσεων (push notifications) όταν δημιουργείται κάποιο νέο γεγονός αιμοδοσίας για το οποίο ο εθελοντής αιμοδότης πληρεί τα απαραίτητα κριτήρια.
-
+\\*
 \begin{table}[H]
 	\begin{center}
 	    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
@@ -456,7 +456,7 @@
 \end{table}
 
 -Δυνατότητα αποδοχής, απόρριψης ή αναβολής της ειδοποίησης για το γεγονός αιμοδοσίας.
-
+\\*
 \begin{table}[H]
 	\begin{center}
 	    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
@@ -501,7 +501,7 @@
 			
 			
 -Δυνατότητα διαχείρισης ραντεβού για αιμοδοσία (δημιουργία νέου ραντεβού, μετάθεση , προβολή, ακύρωση).
-
+\\*
 \begin{table}[H]
 	\begin{center}
 	    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
@@ -545,7 +545,7 @@
 \end{table}	
 			
 -Δυνατότητα προσθήκης και συγχρονισμού των ραντεβού αιμοδοσίας στο ημερολογίου του χρήστη.
-
+\\*
 \begin{table}[H]
 	\begin{center}
 	    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
@@ -594,7 +594,7 @@
 \end{table}	
 		
 -Δυνατότητα ενημέρωσης σχετικά με το υπολειπόμενο διάστημα που πρέπει να παρέλθει ώστε ο εθελοντής να είναι σε θέση να συμμετέχει σε μία νέα αιμοδοσία.
-
+\\*
 \begin{table}[H]
 	\begin{center}
 	    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
@@ -637,7 +637,7 @@
 \end{table}
 
 -Δυνατότητα να κερδίσει πόντους και εμβλήματα βάση των αιμοδοσιών του (gamification system) και να τα μοιραστεί στα μέσα κοινωνικής δικτύωσης.
-
+\\*
 \begin{table}[H]
 	\begin{center}
 	    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
@@ -689,7 +689,7 @@
 
 
 -Δυνατότητα να μοιραστεί και να δημοσιεύσει στοιχεία στα μέσα κοινωνικής δικτύωσης σε κάθε στάδιο της αιμοδοσίας.
-
+\\*
 \begin{table}[H]	
 	\begin{center}
 	    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
@@ -739,7 +739,7 @@
 \end{table}		
 
 -Δυνατότητα δημιουργίας έκκλησης για αίμα σε περίπτωση ανάγκης ατόμων του στενού κύκλου χρήστη και δημοσίευσης του στα μέσα κοινωνικής δικτύωσης.
-
+\\*
 \begin{table}[H]
 	\begin{center}
 	    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
@@ -790,7 +790,7 @@
 \end{table}
 
 -Δυνατότητα διαχείρισης προφίλ χρήστη.
-
+\\*
 \begin{table}[H]
 	\begin{center}
 	    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
@@ -833,7 +833,449 @@
 	\end{center}
 \end{table}	
 
- \subsubsection{Εφαρμογή}
+
+
+
+
+
+
+
+ \subsubsection{Web portal}
+
+Όσον αφορά στους χρήστες/διαχειριστές των κέντρων αιμοδοσίας έχουμε τις εξής λειτουργικές απαιτήσεις:
+
+
+
+
+-Δημιουργία νέων γεγονότων αιμοδοσίας.
+\\*
+\begin{table}[H]
+	\begin{center}
+	    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
+	    \hline
+	    \rowcolor{grayy}
+	    \textbf{Όνομα σεναρίου χρήσης}
+	    \\ \hline    
+	    Δημιουργία γεγονότων αιμοδοσίας.
+	     \\ \hline
+	    \rowcolor{grayy}
+	    \textbf{\textbf{Στόχος}}
+	    \\ \hline
+	 	 Ο εγκεκριμένος χρήστης/διαχειριστής να έχει την δυνατότητα να δημιουργήσει ένα νέο γεγονός αιμοδοσίας και να το καταχωρήσει στο σύστημα ώστε να ειδοποιηθούν οι εθελοντές αιμοδότες.
+	    \\ \hline
+	    \rowcolor{grayy}
+	    \textbf{Λεπτομέρειες}
+	    \\ \hline
+		\textbf{Δράστης} Εγκεκριμένος χρήστης/διαχειριστής των συστημάτων αιμοδοσίας
+		\\*
+		\textbf{Προϋποθέσεις} Ο χρήστης να είναι εγκεκριμένος χρήστης/διαχειριστής εκ μέρους κάποιου νοσοκομείου.
+		\\*
+		\textbf{Ενέργεια ενεργοποίησης} Ο χρήστης επιλέγει την καρτέλα δημιουργία νέου γεγονότος αιμοδοσίας.
+		\\ \hline
+	    \\ \hline
+		\rowcolor{grayy}    
+	    \textbf{Ροή γεγονότων}
+	    \\* 
+		\textbf{Κύρια ροή γεγονότων}
+		\begin{enumerate}
+		\item	 Ο χρήστης επιλέγει την καρτέλα δημιουργίας νέου γεγονότος αιμοδοσίας.
+		\item Ο χρήστης συμπληρώνει τα απαραίτητα πεδία στην φόρμα και επιλέγει καταχώρηση του γεγονότος αιμοδοσίας.
+		\item Το σύστημα τρέχει τους απαραίτητους αλγορίθμους και επιλέγει ποιους χρήστες θα ενημερώσει με τα κατάλληλα push notifications.
+		\end{enumerate}
+		\\*
+		\textbf{Επεκτάσεις}
+		   \\ \hline
+	    \end{tabular}
+	    \caption{Σενάριο χρήσης δημιουργίας έκκλησης για αίμα}
+	    \label{tab:create_blood_donor_request} 
+	\end{center}
+\end{table}
+
+%-Αποστολή ειδοποιήσεων στους εθελοντές αιμοδότες βάση των γεγονότων αιμοδοσίας, των αναγκών και των κριτηρίων αποδοχής.
+
+
+- Προβολή στατιστικών ανά έτος σχετικά με τις ειδοποιήσεις που στάλθηκαν από το συγκεκριμένο κέντρο αιμοδοσίας και την ανταπόκριση των χρηστών (αποδοχή, απόρριψη, άνοιγμα ειδοποίησης, ολοκλήρωση αιμοδοσίας).
+\\*
+
+
+\begin{table}[H]
+	\begin{center}
+	    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
+	    \hline
+	    \rowcolor{grayy}
+	    \textbf{Όνομα σεναρίου χρήσης}
+	    \\ \hline    
+	    Προβολή στατιστικών ανά έτος.
+	     \\ \hline
+	    \rowcolor{grayy}
+	    \textbf{\textbf{Στόχος}}
+	    \\ \hline
+	 	 Ο εγκεκριμένος χρήστης/διαχειριστής να έχει την δυνατότητα να δει αναλυτικά στατιστικά ανά έτος σχετικά με τις ειδοποιήσεις που στάλθηκαν από το συγκεκριμένο κέντρο αιμοδοσίας, ποιοι και πόσοι χρήστες τις απέρριψαν, ποιοι και πόσοι χρήστες τις αποδέχτηκαν, ποιοι και πόσοι χρήστες πραγματοποίησαν αιμοδοσίες, ποιοι άνοιξαν τις ειδοποιήσεις, σε τι χρονικό διάστημα ανταποκρίθηκαν.
+	    \\ \hline
+	    \rowcolor{grayy}
+	    \textbf{Λεπτομέρειες}
+	    \\ \hline
+		\textbf{Δράστης} Εγκεκριμένος χρήστης/διαχειριστής των συστημάτων αιμοδοσίας
+		\\*
+		\textbf{Προϋποθέσεις} Ο χρήστης να είναι εγκεκριμένος χρήστης/διαχειριστής εκ μέρους κάποιου νοσοκομείου.
+		\\*
+		\textbf{Ενέργεια ενεργοποίησης} Ο χρήστης επιλέγει την καρτέλα προβολή στατιστικών στοιχείων.
+		\\ \hline
+	    \\ \hline
+		\rowcolor{grayy}    
+	    \textbf{Ροή γεγονότων}
+	    \\* 
+		\textbf{Κύρια ροή γεγονότων}
+		\begin{enumerate}
+		\item	 Ο χρήστης επιλέγει την καρτέλα προβολή στατιστικών στοιχείων.
+		\item Το σύστημα φέρνει τα απαραίτητα δεδομένα από την βάση δεδομένων.
+		\item Ο χρήστης πλοηγείται και επιλέγει το διάγραμμα που θέλει.
+		\item Τα δεδομένα παρουσιάζονται στον χρήστη αναλυτικά  σε νέα σελίδα.
+		\end{enumerate}
+		\\*
+		\textbf{Επεκτάσεις}
+		   \\ \hline
+	    \end{tabular}
+	    \caption{Σενάριο χρήσης δημιουργίας έκκλησης για αίμα}
+	    \label{tab:create_blood_donor_request} 
+	\end{center}
+\end{table}
+
+
+-Διαχείριση των ραντεβού για αιμοληψία.
+\\*
+\begin{table}[H]
+	\begin{center}
+	    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
+	    \hline
+	    \rowcolor{grayy}
+	    \textbf{Όνομα σεναρίου χρήσης}
+	    \\ \hline    
+	     Διαχείριση των ραντεβού για αιμοληψία.
+	     \\ \hline
+	    \rowcolor{grayy}
+	    \textbf{\textbf{Στόχος}}
+	    \\ \hline
+	 	 Ο εγκεκριμένος χρήστης/διαχειριστής να μπορεί να διαχειριστεί το σύστημα των ραντεβού, είτε ορίζοντας τα διαθέσιμα ραντεβού για αιμοδοσία, είτε βλέποντας τα υπάρχοντα, είτε αλλάζοντας την ημερομηνία ενός ραντεβού.
+	    \\ \hline
+	    \rowcolor{grayy}
+	    \textbf{Λεπτομέρειες}
+	    \\ \hline
+		\textbf{Δράστης} Εγκεκριμένος χρήστης/διαχειριστής των συστημάτων αιμοδοσίας.
+		\\*
+		\textbf{Προϋποθέσεις} Ο χρήστης να είναι εγκεκριμένος χρήστης/διαχειριστής εκ μέρους κάποιου νοσοκομείου.
+		\\*
+		\textbf{Ενέργεια ενεργοποίησης} Ο χρήστης επιλέγει την καρτέλα ραντεβού αιμοδοσίας.
+		\\ \hline
+	    \\ \hline
+		\rowcolor{grayy}    
+	    \textbf{Ροή γεγονότων}
+	    \\* 
+		\textbf{Κύρια ροή γεγονότων}
+		\begin{enumerate}
+			\item	 Ο χρήστης επιλέγει την καρτέλα ραντεβού αιμοδοσίας.
+			\item  Ο χρήστης ορίζει τις διαθέσιμες ημερομηνίες και ώρες για ραντεβού εάν πρόκειται για νέα  αιμοδοσία, βλέπει τα προγραμματισμένα ραντεβού, είτε επιλέγει κάποιο ραντεβού και αλλάζει την ημερομηνία του. 
+			\item Το σύστημα ανάλογα με τις προηγούμενες ενέργειες του χρήστη κατοχυρώνει τις τελικές αλλαγές.
+		\end{enumerate}
+		\\*
+		\textbf{Επεκτάσεις}
+		   \\ \hline
+	    \end{tabular}
+	    \caption{Σενάριο χρήσης διαχείρισης ραντεβού αιμοδοσίας}
+	    \label{tab:blood_donation_reservation_management} 
+	\end{center}
+\end{table}	
+
+
+
+-Δυνατότητα διαχείρισης προφίλ κέντρου αιμοδοσίας.
+\\*
+
+\begin{table}[H]
+	\begin{center}
+	    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
+	    \hline
+	    \rowcolor{grayy}
+	    \textbf{Όνομα σεναρίου χρήσης}
+	    \\ \hline    
+	    Διαχείριση προφίλ του αιμοδοτικού κέντρου. 
+	     \\ \hline
+	    \rowcolor{grayy}
+	    \textbf{\textbf{Στόχος}}
+	    \\ \hline
+	 	 Ο εγκεκριμένος χρήστης/διαχειριστής να μπορεί να διαχειριστεί να δει και να επεξεργαστεί τα στοιχεία του αιμοδοτικού κέντρου.
+	    \\ \hline
+	    \rowcolor{grayy}
+	    \textbf{Λεπτομέρειες}
+	    \\ \hline
+		\textbf{Δράστης} Εγκεκριμένος χρήστης/διαχειριστής των συστημάτων αιμοδοσίας.
+		\\*
+		\textbf{Προϋποθέσεις} Ο χρήστης να είναι εγκεκριμένος χρήστης/διαχειριστής εκ μέρους κάποιου νοσοκομείου.
+		\\*
+		\textbf{Ενέργεια ενεργοποίησης} Ο χρήστης μεταβαίνει στις ρυθμίσεις του προσωπικού του λογαριασμού.
+		\\ \hline
+	    \\ \hline
+		\rowcolor{grayy}    
+	    \textbf{Ροή γεγονότων}
+	    \\* 
+		\textbf{Κύρια ροή γεγονότων}
+		\begin{enumerate}
+			\item	 Ο χρήστης μεταβαίνει στις ρυθμίσεις του λογαριασμού του αιμοδοτικού κέντρου.
+			\item Τροποποιεί τα στοιχεία που επιθυμεί.
+			\item Το σύστημα αποθηκεύει τις αλλαγές του χρήστη και ανανεώνει το προφίλ, ώστε να ορατά σε όλους τα νέα δεδομένα.
+		\end{enumerate}
+		\\*
+		\textbf{Επεκτάσεις}
+		   \\ \hline
+	    \end{tabular}
+	    \caption{Σενάριο χρήσης διαχείρισης προφίλ κέντρου αιμοδοσίας}
+	    \label{tab:profile_management}
+	\end{center}
+\end{table}	
+
+	%	\item Εισαγωγή δεδομένων από το τοπικό τους σύστημα στο κεντρικό σύστημα μας που βρίσκεται στο υπολογιστικό νέφος
+	
+
+Δυνατότητα εγγραφής στο σύστημα νέου εθελοντή αιμοδότη.
+\\*	
+
+\begin{table}[H]
+	\begin{center}
+	    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
+	    \hline
+	    \rowcolor{grayy}
+	    \textbf{Όνομα σεναρίου χρήσης}
+	    \\ \hline    
+	    Δημιούργια λογαριασμού για νέο εθελοντή αιμοδότη.
+	     \\ \hline
+	    \rowcolor{grayy}
+	    \textbf{\textbf{Στόχος}}
+	    \\ \hline
+	 	 Ο εγκεκριμένος χρήστης/διαχειριστής να μπορεί να δημιουργήσει με χρήση μόνο ΑΜΚΑ νέο λογαριασμό για κάποιον εθελοντή αιμοδότη που δεν είναι εγγεγραμμένος στο σύστημα, στον οποίο λογαριασμό ο χρήστης να μπορεί να αποκτήσει πρόσβαση εισάγοντας το ΑΜΚΑ του, και να τον διαχειριστεί.
+	    \\ \hline
+	    \rowcolor{grayy}
+	    \textbf{Λεπτομέρειες}
+	    \\ \hline
+		\textbf{Δράστης} Εγκεκριμένος χρήστης/διαχειριστής των συστημάτων αιμοδοσίας.
+		\\*
+		\textbf{Προϋποθέσεις} Ο χρήστης να είναι εγκεκριμένος χρήστης/διαχειριστής εκ μέρους κάποιου νοσοκομείου.
+		\\*
+		\textbf{Ενέργεια ενεργοποίησης} Έρχεται να δώσει αίμα εθελοντής που δεν είναι εγγεγραμμένος στο σύστημα.
+		\\ \hline
+	    \\ \hline
+		\rowcolor{grayy}    
+	    \textbf{Ροή γεγονότων}
+	    \\* 
+		\textbf{Κύρια ροή γεγονότων}
+		\begin{enumerate}
+			\item	 Έρχεται να δώσει αίμα εθελοντής που δεν είναι εγγεγραμμένος στο σύστημα.
+			\item Ο χρήστης μεταβαίνει στην καρτέλα προσθήκη νέου χρήστη.
+			\item Εισάγει το ΑΜΚΑ και ζητά την δημιουργία λογαριασμού.
+			\item Το σύστημα δημιουργεί τον λογαριασμό του εθελοντή αιμοδότη.
+		\end{enumerate}
+		\\*
+		\textbf{Επεκτάσεις}
+		   \\ \hline
+	    \end{tabular}
+	    \caption{Σενάριο χρήσης διαχείρισης προφίλ κέντρου αιμοδοσίας}
+	    \label{tab:profile_management}
+	\end{center}
+\end{table}	
+
+
+
+-Δυνατότητα καταχώρησης της ολοκλήρωσης της αιμοδοσίας.
+\\*	
+
+\begin{table}[H]
+	\begin{center}
+	    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
+	    \hline
+	    \rowcolor{grayy}
+	    \textbf{Όνομα σεναρίου χρήσης}
+	    \\ \hline    
+	    Καταχώρηση ολοκλήρωσης της αιμοδοσίας.
+	     \\ \hline
+	    \rowcolor{grayy}
+	    \textbf{\textbf{Στόχος}}
+	    \\ \hline
+	 	 Ο εγκεκριμένος χρήστης/διαχειριστής να μπορεί να ενημερώσει το προφίλ του χρήστη, όταν αυτός ολοκληρώσει επιτυχώς μια αιμοδοσία.
+	    \\ \hline
+	    \rowcolor{grayy}
+	    \textbf{Λεπτομέρειες}
+	    \\ \hline
+		\textbf{Δράστης} Εγκεκριμένος χρήστης/διαχειριστής των συστημάτων αιμοδοσίας.
+		\\*
+		\textbf{Προϋποθέσεις} Ο χρήστης να είναι εγκεκριμένος χρήστης/διαχειριστής εκ μέρους κάποιου νοσοκομείου.
+		\\*
+		\textbf{Ενέργεια ενεργοποίησης} Ολοκληρώνει την αιμοδοσία ένας εθελοντής αιμοδότης.
+		\\ \hline
+	    \\ \hline
+		\rowcolor{grayy}    
+	    \textbf{Ροή γεγονότων}
+	    \\* 
+		\textbf{Κύρια ροή γεγονότων}
+		\begin{enumerate}
+			\item	 Ο εθελοντής αιμοδότης ολοκληρώνει την αιμοδοσία.
+			\item Ο χρήστης μεταβαίνει στην καρτέλα καταχώρηση αιμοδοσίας
+			\item Εισάγει το ΑΜΚΑ, τα στοιχεία της αιμοδοσίας και πατάει ολοκλήρωση.
+			\item Το σύστημα ενημερώνει τον λογαριασμό του εθελοντή αιμοδότη.
+		\end{enumerate}
+		\\*
+		\textbf{Επεκτάσεις}
+		   \\ \hline
+	    \end{tabular}
+	    \caption{Σενάριο χρήσης διαχείρισης προφίλ κέντρου αιμοδοσίας}
+	    \label{tab:profile_management}
+	\end{center}
+\end{table}	
+
+
+Δυνατότητα ελέγχου τήρησης προϋποθέσεων καταλληλότητας εθελοντή αιμοδότη.
+\\*
+
+
+\begin{table}[H]
+	\begin{center}
+	    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
+	    \hline
+	    \rowcolor{grayy}
+	    \textbf{Όνομα σεναρίου χρήσης}
+	    \\ \hline    
+	    Έλεγχος καταλληλότητας αιμοδότη.
+	     \\ \hline
+	    \rowcolor{grayy}
+	    \textbf{\textbf{Στόχος}}
+	    \\ \hline
+	 	 Ο εγκεκριμένος χρήστης/διαχειριστής να μπορεί ελέγξει αυτόματα, αν ο εθελοντής τηρεί κάποια κριτήρια που τον καθιστούν κατάλληλο για αιμοδοσία. 
+	    \\ \hline
+	    \rowcolor{grayy}
+	    \textbf{Λεπτομέρειες}
+	    \\ \hline
+		\textbf{Δράστης} Εγκεκριμένος χρήστης/διαχειριστής των συστημάτων αιμοδοσίας.
+		\\*
+		\textbf{Προϋποθέσεις} Ο χρήστης να είναι εγκεκριμένος χρήστης/διαχειριστής εκ μέρους κάποιου νοσοκομείου.
+		\\*
+		\textbf{Ενέργεια ενεργοποίησης} Έρχεται για αιμοδοσία ένας εθελοντής αιμοδότης.
+		\\ \hline
+	    \\ \hline
+		\rowcolor{grayy}    
+	    \textbf{Ροή γεγονότων}
+	    \\* 
+		\textbf{Κύρια ροή γεγονότων}
+		\begin{enumerate}
+			\item	 Ο εθελοντής αιμοδότης έρχεται για αιμοδοσία.
+			\item Ο χρήστης μεταβαίνει στην καρτέλα καταχώρηση αιμοδοσίας
+			\item Εισάγει το ΑΜΚΑ και ζητάει πραγματοποίηση ελέγχου.
+			\item Το σύστημα επικοινωνεί με το epSOS (ηλεκτρονική συνταγογράφηση και ηλεκτρονικός ιατρικός φάκελος ασθενούς) και "τραβάει" τα απαραίτητα δεδομένα, τρέχει ειδικούς αλγορίθμους και αποφαίνεται αν ο χρήστης είναι κατάλληλος ή όχι.
+		\end{enumerate}
+		\\*
+		\textbf{Επεκτάσεις}
+		   \\ \hline
+	    \end{tabular}
+	    \caption{Σενάριο χρήσης διαχείρισης προφίλ κέντρου αιμοδοσίας}
+	    \label{tab:profile_management}
+	\end{center}
+\end{table}	
+
+
+			
+Όσον αφορά στους υπέρ-διαχειριστές του συστήματος έχουμε τις παρακάτω λειτουργικές απαιτήσεις:
+
+
+-Δυνατότητα διαχείρισης λογαριασμών χρηστών.
+\\*
+\begin{table}[H]
+	\begin{center}
+	    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
+	    \hline
+	    \rowcolor{grayy}
+	    \textbf{Όνομα σεναρίου χρήσης}
+	    \\ \hline    
+	    Διαχείριση προφίλ των χρηστών.
+	     \\ \hline
+	    \rowcolor{grayy}
+	    \textbf{\textbf{Στόχος}}
+	    \\ \hline
+	 	 Ο υπέρ-διαχειριστής να μπορεί να προσθέσει νέους χρήστες, να τροποποιήσει τα προφίλ ήδη υπαρχόντων χρηστών και να διαγράψει προφίλ χρηστών.
+	     \\ \hline	    
+	     \rowcolor{grayy}
+	    \textbf{Λεπτομέρειες}
+	    \\ \hline
+		\textbf{Δράστης} Υπέρ-διαχειριστής του συστήματος. 
+		\\*
+		\textbf{Προϋποθέσεις} Ο χρήστης να είναι υπέρ-διαχειριστής.
+		\\*
+		\textbf{Ενέργεια ενεργοποίησης} Ο χρήστης μεταβαίνει στην καρτέλα διαχείρισης χρηστών.
+				\\ \hline
+	    \\ \hline
+		\rowcolor{grayy}    
+	    \textbf{Ροή γεγονότων}
+	    \\* 
+		\textbf{Κύρια ροή γεγονότων}
+		\begin{enumerate}
+			\item	 Ο χρήστης μεταβαίνει στην καρτέλα διαχείρισης χρηστών.
+			\item Τροποποιεί τα στοιχεία που επιθυμεί.
+			\item Το σύστημα αποθηκεύει τις αλλαγές του χρήστη και αλλάζει τα προφίλ, στέλνοντας ειδοποιήσεις στους αντίστοιχους χρήστες.
+		\end{enumerate}
+		\\*
+		\textbf{Επεκτάσεις}
+		   \\ \hline
+	    \end{tabular}
+	    \caption{Σενάριο χρήσης διαχείρισης προφίλ κέντρου αιμοδοσίας}
+	    \label{tab:profile_management}
+	\end{center}
+\end{table}	
+
+
+
+- Προβολή στατιστικών για τους χρήστες του συστήματος.
+\\*		
+
+
+\begin{table}[H]
+	\begin{center}
+	    \begin{tabular}{|p{\dimexpr \linewidth-2\tabcolsep}|}
+	    \hline
+	    \rowcolor{grayy}
+	    \textbf{Όνομα σεναρίου χρήσης}
+	    \\ \hline    
+	    Προβολή στατιστικών.
+	     \\ \hline
+	    \rowcolor{grayy}
+	    \textbf{\textbf{Στόχος}}
+	    \\ \hline
+	 	 Ο υπέρ-διαχειριστής να έχει την δυνατότητα να δει αναλυτικά στατιστικά σχετικά με τους χρήστες και το πόσο είναι ενεργοί / χρησιμοποιούν την εφαρμογή. 
+	    \\ \hline
+	    \rowcolor{grayy}
+	    \textbf{Λεπτομέρειες}
+	    \\ \hline
+		\textbf{Δράστης} Υπέρ-διαχειριστής του συστήματος.
+		\\*
+		\textbf{Προϋποθέσεις} Ο χρήστης να είναι υπέρ-διαχειριστής.
+		\\*
+		\textbf{Ενέργεια ενεργοποίησης} Ο χρήστης επιλέγει την καρτέλα προβολή στατιστικών στοιχείων.
+		\\ \hline
+	    \\ \hline
+		\rowcolor{grayy}    
+	    \textbf{Ροή γεγονότων}
+	    \\* 
+		\textbf{Κύρια ροή γεγονότων}
+		\begin{enumerate}
+		\item	 Ο χρήστης επιλέγει την καρτέλα προβολή στατιστικών στοιχείων.
+		\item Το σύστημα φέρνει τα απαραίτητα δεδομένα από την βάση δεδομένων.
+		\item Ο χρήστης πλοηγείται και επιλέγει το διάγραμμα που θέλει.
+		\item Τα δεδομένα παρουσιάζονται στον χρήστη αναλυτικά  σε νέα σελίδα.
+		\end{enumerate}
+		\\*
+		\textbf{Επεκτάσεις}
+		   \\ \hline
+	    \end{tabular}
+	    \caption{Σενάριο χρήσης δημιουργίας έκκλησης για αίμα}
+	    \label{tab:create_blood_donor_request} 
+	\end{center}
+\end{table}
+
 
 \section{Ανάλυση απαιτήσεων (web, mobile)}
 \section{Σχεδιασμός και αρχιτεκτονική της εφαρμογής (web, mobile)}
