Add Javascript Listings Template

--- a/thesis.tex
+++ b/thesis.tex
@@ -22,6 +22,34 @@
 
 
 %----------------------------------------------------------------------------------------
+%	NEW COMMAND TO SET LISTINGS PATH (like graphicspath command)  $
+%----------------------------------------------------------------------------------------
+
+\newcommand*\lstinputpath[1]{\lstset{inputpath=#1}}
+\lstinputpath{Code/}
+
+%----------------------------------------------------------------------------------------
+%	JAVASCRIPT LST TEMPLATE  $
+%----------------------------------------------------------------------------------------
+
+
+\lstdefinelanguage{JavaScript}
+{
+  keywords={break, case, catch, continue, debugger, default, delete, do, else, false, finally, for, function, if, in, instanceof, new, null, return, switch, this, throw, true, try, typeof, var, void, while, with},
+  morecomment=[l]{//},
+  morecomment=[s]{/*}{*/},
+  morestring=[b]',
+  morestring=[b]",
+  ndkeywords={class, export, boolean, throw, implements, import, this},
+  keywordstyle=\color{blue}\bfseries,
+  ndkeywordstyle=\color{darkgray}\bfseries,
+  identifierstyle=\color{black},
+  commentstyle=\color{purple}\ttfamily,
+  stringstyle=\color{red}\ttfamily,
+  sensitive=true
+}
+
+%----------------------------------------------------------------------------------------
 %	LISTINGS (CODE) TEMPLATE4$  $
 %----------------------------------------------------------------------------------------
 
